--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.32.2",
@@ -24,8 +25,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "react-native-webview": "^11.18.1",
-    "expo-updates": "~0.13.2"
+    "react-native-webview": "^11.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
